--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,8 @@
         <servlet-name>view All</servlet-name>
         <url-pattern>/login.html</url-pattern>
         <url-pattern>/main.html</url-pattern>
+        <url-pattern>/userlogin.html</url-pattern>
+        <url-pattern>/usermain.html</url-pattern>
         <url-pattern>/view/*</url-pattern>
     </servlet-mapping>
 <!--    <servlet>-->
